force-app/main/default/objects/SS_Product_Action_Set__mdt/SS_Product_Action_Set__mdt.object-meta.xml
<CustomObject>
    <description>Define a set of Product Actions to associate with a product catalog item.</description>
    <label>SS Product Action Set</label>
    <pluralLabel>SS Product FlActionow Set</pluralLabel>
</CustomObject>