force-app/main/default/objects/SS_Product_Action_Set__mdt/fields/Action_1__c.field-meta.xml
<CustomField>
    <fullName>Action_1__c</fullName>
    <inlineHelpText>First action in the action manu</inlineHelpText>
    <label>Action 1</label>
    <referenceTo>SS_Product_Action__mdt</referenceTo>
    <relationshipLabel>SS Product FlowAction Set (Action 1)</relationshipLabel>
    <relationshipName>SS_Product_FlActionow_Set</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>