force-app/main/default/objects/SS_Product_Action_Set__mdt/fields/Action_3__c.field-meta.xml
<CustomField>
    <fullName>Action_3__c</fullName>
    <inlineHelpText>Third Action to display on the action menu</inlineHelpText>
    <label>Action 3</label>
    <referenceTo>SS_Product_Action__mdt</referenceTo>
    <relationshipLabel>SS Product FlowAction Set (Action 3)</relationshipLabel>
    <relationshipName>SS_Product_FlActionow_Set3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>