force-app/main/default/objects/SS_Product_Action_Set__mdt/fields/Action_5__c.field-meta.xml
<CustomField>
    <fullName>Action_5__c</fullName>
    <inlineHelpText>Fifth menu action</inlineHelpText>
    <label>Action 5</label>
    <referenceTo>SS_Product_Action__mdt</referenceTo>
    <relationshipLabel>SS Product FlowAction Set (Action 5)</relationshipLabel>
    <relationshipName>SS_Product_FlowAction_Set5</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>