force-app/main/default/objects/SS_Product_Action_Set__mdt/fields/iconName__c.field-meta.xml
<CustomField>
    <fullName>iconName__c</fullName>
    <inlineHelpText>Menu button icon (SLDS name. e.g. utility:settings)</inlineHelpText>
    <label>iconName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>